--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -40,7 +40,6 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "cypress": "^12.14.0",
-    "type": "module"
+    "cypress": "^12.13.0"
   }
 }
